[tool.poetry]
name = "referral-system"
version = "0.1.0"
description = ""
authors = ["Vud <vud150294@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
