[tool.poetry]
name = "referral-system"
version = "0.1.0"
description = ""
authors = ["Vud <vud150294@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
pre-commit = "^4.0.1"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
commitizen = "^3.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
